--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "react express boilerplate",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -15,9 +16,11 @@
   "bugs": {
     "url": "https://github.com/HarryCandlish/React-Express-Boilerplate/issues"
   },
-  "homepage": "https://github.com/HarryCandlish/React-Express-Boilerplate#readme",
   "dependencies": {
     "concurrently": "^4.1.0",
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.11"
   }
 }
