--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "concurrently": "^4.1.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "node-sass": "^4.12.0",
+    "sass": "^1.20.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
