--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
+    "knex": "^0.16.5",
     "node-sass": "^4.12.0",
-    "sass": "^1.20.1"
+    "sass": "^1.20.1",
+    "sqlite3": "^4.0.8"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
