--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "node-sass": "^4.12.0",
+    "react-router-dom": "^5.0.0",
     "sass": "^1.20.1"
   },
   "devDependencies": {
